--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -10,9 +10,12 @@
         <script type="text/javascript" th:src="@{/js/jquery.mask.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/validacion_controladores.js}"></script>
         <script type="text/javascript" th:src="@{/js/validacion_controladores2.js}"></script>
+        <script type="text/javascript" th:src="@{/js/jquery-ui.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/validacion_todores3.js}"></script>
+        <script type="text/javascript" th:src="@{/js/helpJs.js}"></script>
         
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-              <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
