--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -63,9 +63,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <!--<a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>-->
                         </tr>
                     </table>
-                  
+                     <!--<th:block th:include="../templates/paginator-nav"></th:block>-->
+                
                 </div>
-                 <!--<nav th:replace="paginator-nav :: paginator"></nav>-->
+                <th:block th:include="../templates/paginator-nav"></th:block>
             </div>    
              <div class="col-md-12">
                     <th:block th:include="../templates/footer"></th:block>
@@ -73,6 +74,31 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
     
 <!--</div>-->
+
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
+
  <script th:inline="javascript">
         $(document).ready(function () {
     if([[${msg}]]===3){
