--- a/src/main/resources/templates/paginator-nav.html
+++ b/src/main/resources/templates/paginator-nav.html
@@ -12,8 +12,8 @@
 
 
 <li class="page-item" th:class="${not page.hasPrevious? 'page-item disabled': 'page-item'}">
-<span class="page-link" th:if="${not page.hasPrevious}">&laquo;</span>
-<a class="page-link" th:if="${page.hasPrevious}" th:href="@{${page.url}(page=${page.paginaActual-2})}">&laquo;</a>
+<span class="page-link" th:if="${not page.hasPrevious}">anterior</span>
+<a class="page-link" th:if="${page.hasPrevious}" th:href="@{${page.url}(page=${page.paginaActual-2})}">anterior</a>
 </li>
 
 <li class="page-item" th:each="item : ${page.paginas}" th:class="${item.actual? 'page-item active': 'page-item'}">
@@ -23,12 +23,12 @@
 
 
 <li class="page-item" th:class="${not page.hasNext? 'page-item disabled': 'page-item'}">
-<span class="page-link" th:if="${not page.hasNext}">&raquo;</span>
-<a class="page-link" th:if="${page.hasNext}" th:href="@{${page.url}(page=${page.paginaActual})}">&raquo;</a>
+<span class="page-link" th:if="${not page.hasNext}">Siguiente</span>
+<a class="page-link" th:if="${page.hasNext}" th:href="@{${page.url}(page=${page.paginaActual})}">Siguiente</a>
 </li>
 <li class="page-item" th:class="${page.last? 'page-item disabled': 'page-item'}">
-<span class="page-link" th:if="${page.last}">&Uacute;ltima</span>
-<a class="page-link" th:if="${not page.last}" th:href="@{${page.url}(page=${page.totalPaginas-1})}">&Uacute;ltima</a>
+<span class="page-link" th:if="${page.last}">Ultima</span>
+<a class="page-link" th:if="${not page.last}" th:href="@{${page.url}(page=${page.totalPaginas-1})}">Ultima</a>
 </li>
 </ul>
 
