--- a/src/main/resources/templates/fragments/comision/comisiones.html
+++ b/src/main/resources/templates/fragments/comision/comisiones.html
@@ -20,7 +20,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     
     <div th:if="${not #lists.isEmpty(comisiones)}">
         <h3 align="center">Listado de Comisiones</h3><br>
-        <table class="table table-striped">
+        <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
             <tr>
                 <th>Codigo</th>
                 <th>Nombre</th>
@@ -47,6 +47,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>
      <script th:inline="javascript">
         $(document).ready(function () {
+            $('#tablita').DataTable();
+            
     if([[${msg}]]===3){
        swal({
            
