--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -12,14 +12,21 @@ var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
-    <div class="container">
-         <br><br>
+<div class="row">
+            <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+   <div class="col-md-9">
+     
+                        <div th:if="${not #lists.isEmpty(asistenciacapacitaciones)}">
+               <br><br>
           <div class="row text-center">
                         <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
-        <div th:if="${not #lists.isEmpty(asistenciacapacitaciones)}">
+       
             <h2>Todas las asistencias Capacitacion</h2>
-            <table class="table table-striped">
-                <tr>
+           <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+                    <thead>
+                    <tr>
                     <th>Codigo de Asistencia de Capacitacion</th>
                      <th>Capacitación</th>
                       <!--<th>Empleado</th>-->
@@ -34,6 +41,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <th>Acciones</th>
 
                 </tr>
+                </thead>
                 <tr th:each="asistenciacapacitacion : ${asistenciacapacitaciones}">
                     <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
                        <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
@@ -58,6 +66,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </tr>
             </table>
         </div>
+    </div>
+        
+       </div>
+     <div class="col-md-12">
+                    <th:block th:include="../templates/footer"></th:block>
+                </div>
     </div>
 </body>
  <script th:inline="javascript">
@@ -94,8 +108,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     });
 </script>
   
-     <script th:inline="javascript">
+      <script th:inline="javascript">
         $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
+            
     if([[${msg}]]===3){
        swal({
            
@@ -104,7 +123,16 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../asistenciacapacitaciones/';
+                location.href = '../../comisiones/';
+       }); 
+}
+    if([[${msg}]]===0){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Ingresado Exitosamente",
+                type: "success",
+                icon: "success",
        }); 
 }
     
@@ -135,4 +163,5 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     });
         }
     </script>
+    </body>
 </html>
