--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -12,11 +12,23 @@ var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
-<div class="container">
+<div class="row">
+        
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-9">
+               <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/capacitador.png" width="150" th:src="@{/image/capacitador.png}"/>
+                         </div>
+           <h3 align="center">Listado de Capacitadores</h3>
    
     <div th:if="${not #lists.isEmpty(capacitadores)}">
-        <h3 align="center">Listado de Capacitadores</h3>
-        <table class="table table-striped">
+        <!--<h3 align="center">Listado de Capacitadores</h3>-->
+         <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+            
+            <thead>
             <tr>
                 <th>Codigo</th>
                 <th>Responsable del Capacitador</th>
@@ -34,6 +46,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <!--                  <th>Codigo Empleado</th>-->
                   <th>Acciones</th>
             </tr>
+            </thead>
             <tr th:each="capacitador : ${capacitadores}">
                 <td th:text="${capacitador.codigocapacitador}">Código</td>
                  <td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>
@@ -62,7 +75,41 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         </table>
     </div>
 </div>
-    <script th:inline="javascript">
+    
+    </div>
+       <div class="col-md-12">
+                    <th:block th:include="../templates/footer"></th:block>
+                </div>
+  
+  <script th:inline="javascript">
+    $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
+
+ <script th:inline="javascript">
         $(document).ready(function () {
     if([[${msg}]]===3){
        swal({
@@ -72,7 +119,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../capacitadores/';
+                location.href = '../../comites/';
        }); 
 }
     
