--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -13,21 +13,23 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
     
-
+<div class="row">
+            <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+         <div class="col-md-9">               
          
             
     <div th:if="${not #lists.isEmpty(costocapacitaciones)}">
-   <div class="row">
-                <div class="col-md-3">
-                        <th:block th:include="../templates/menu"></th:block>
-                    </div>
-                <div class="col-md-9">
-                       <br><br>
+  
+    
+        <br><br>
           <div class="row text-center">
                         <img src="../../static/image/costos.png" width="150" th:src="@{/image/costos.png}"/>
                          </div>
         <h3 align="center">Listado de costos de Capacitaciones</h3>
-        <table class="table table-striped">
+        <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+            <thead>
             <tr>
                 <th>Codigo de costo de Capacitacion</th>
                 <th>Costo Persona</th>
@@ -38,6 +40,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Acciones</th>
                 
             </tr>
+            </thead>
             <tr th:each="costocapacitacion : ${costocapacitaciones}">
                 <td align="center" th:text="${costocapacitacion.codigocostocapacitacion}">Codigo Capacitacion</td>
                 <td align="center" th:text="${costocapacitacion.costopersona}">Costo Persona</td>
@@ -58,8 +61,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </tr>
         </table>
     </div>
+                    
 </div>
-    <script th:inline="javascript">
+    </div>
+                <div class="col-md-12">
+                    <th:block th:include="../templates/footer"></th:block>
+                </div>
+ 
+</body>
+  <script th:inline="javascript">
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
@@ -68,7 +78,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success"
        }).then(function() {
-                location.href = '../costocapacitaciones/';
+                location.href = '../asistenciacapacitaciones/';
        }); 
 }
     
@@ -93,8 +103,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     });
 </script>
   
-     <script th:inline="javascript">
+      <script th:inline="javascript">
         $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
+            
     if([[${msg}]]===3){
        swal({
            
@@ -103,7 +118,16 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../costocapacitaciones/';
+                location.href = '../../comisiones/';
+       }); 
+}
+    if([[${msg}]]===0){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Ingresado Exitosamente",
+                type: "success",
+                icon: "success",
        }); 
 }
     
@@ -134,5 +158,4 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     });
         }
     </script>
-</body>
 </html>
