--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -13,10 +13,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
 <div class="row">
-   <div class="col-md-2">
+   <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
-     <div class="col-md-10">
+     <div class="col-md-9">
         
           <div class="row text-center">
                         <img src="../../static/image/cuadros.png" width="100" th:src="@{/image/cuadros.png}"/>
@@ -24,7 +24,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <h3 align="center">Listado de Cuadro Directivos</h3>
     <div th:if="${not #lists.isEmpty(cuadrodirectivos)}">
        
-        <table class="table table-striped">
+       <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+             <thead> 
             <tr>
                 <th>Código</th>
                 <th>Responsable</th>
@@ -35,6 +36,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                  <th>Acciones</th>
                 
             </tr>
+             </thead>
             <tr th:each="cuadrodirectivo : ${cuadrodirectivos}">
                 <td align="center" th:text="${cuadrodirectivo.codigocuadrodirectivo}">Codigo</td>
                 <td th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Responsable</td>
@@ -58,7 +60,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
 </body>
 <script th:inline="javascript">
-    $(document).ready(function () {
+   $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
     if([[${msg}]]===0){
        swal({
                 title: "Exito!",
