--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
@@ -6,15 +6,21 @@
 </head>
 <body>
 <!--<div class="container">-->
-<div th:if="${not #lists.isEmpty(diagnosticocapacitaciones)}">
-            <div class="row">
+<div class="row">
                 <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
+<div th:if="${not #lists.isEmpty(diagnosticocapacitaciones)}">
+            
                 <div class="col-md-9">
+                     <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/evaluacion.png" width="150" th:src="@{/image/evaluacion.png}"/>
+                         </div>
                     <h3 align="center">Listado de Diagnosticos</h3>
-                    <table class="table table-striped">
-                        <tr>
+                     <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+                         <thead>
+                         <tr>
                              <th>Codigo Diagnostico</th>
                               <th>Nombre Capacitación</th>
                             <th>Nombre Dirección</th>
@@ -28,7 +34,7 @@
                             <th>Cargo de quien Autoriza</th>-->
                             <th>Acciones</th>
                         </tr>
-                        
+                        </thead>
                         <tr th:each="diagnosticocapacitacion : ${diagnosticocapacitaciones}">
                             <td th:text="${diagnosticocapacitacion.codigodiagnosticocapacitacion}">Codigo de Diagnostico</td>
                             <td th:text="${diagnosticocapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Diagnostico</td>
@@ -57,7 +63,12 @@
     </div>
 <!--</div>-->
 <script th:inline="javascript">
-    $(document).ready(function () {
+    
+       $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
     if ([[${msg}]] === 0){
     swal({
     title: "Exito!",
