--- a/src/main/resources/templates/fragments/inasistencia/inasistencias.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistencias.html
@@ -25,7 +25,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-9">
            <h3 align="center">Listado de Inasistencias</h3>
       
-        <table class="table table-striped">
+        <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+            
+            <thead>
             <tr>
                 <th>Código inasistencia</th>
                 <th>Nombre Empleado</th>
@@ -37,6 +39,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                <th>Acciones</th>
                 
             </tr>
+            </thead>
             <tr th:each="inasistencia : ${inasistencias}">
                 <td th:text="${inasistencia.codigoinasistencia}">Codigo</td>
                 <td th:text="${inasistencia.codigoempleado.nombreempleado}">Nombre</td>
@@ -67,7 +70,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
    
    
    <script th:inline="javascript">
-    $(document).ready(function () {
+     $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
     if([[${msg}]]===0){
        swal({
                 title: "Exito!",
