--- a/src/main/resources/templates/fragments/incapacidad/incapacidades.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidades.html
@@ -25,8 +25,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-9">
            <h3 align="center">Listado de Incapacidades</h3>
       
-        <table class="table table-striped">
-               <tr>
+         <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+             <thead> 
+             <tr>
                              <th>Codigo Incapacidad</th>
                               <th>Nombre Incapacitado</th>
                             <th>Numero Formulario ISSS</th>
@@ -44,6 +45,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                               <th>Acciones</th>
 
                         </tr>
+             </thead>
             <tr th:each="incapacidad : ${incapacidades}">
                 <!--<td th:text="${incapacidad.codigoempleado.nombreempleado}">Codigo</td>-->
                  <td th:text="${incapacidad.codigoincapacidad}">Codigo</td>
@@ -85,6 +87,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
    
      <script th:inline="javascript">
         $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
     if([[${msg}]]===3){
        swal({
            
