--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -24,7 +24,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     
     <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
         <h3 align="center" >Lista de Niveles Escolares</h3>
-        <table class="table table-striped">
+          <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+             <thead>
             <tr>
                 <th>Centro Educativo</th>
                 <th>Años aprobados</th>
@@ -38,6 +39,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                    
                 
             </tr>
+             </thead>
             <tr th:each="nivelescolaridad : ${nivelescolaridades}">
 
                 <td th:text="${nivelescolaridad.centroeducativo}">Centro educativo</td>
@@ -69,7 +71,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </div>   
          </div>
    <script th:inline="javascript">
-    $(document).ready(function () {
+   $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
     if ([[${msg}]] === 0){
     swal({
     title: "Exito!",
