--- a/src/main/resources/templates/fragments/beneficio/beneficioshow.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow.html
@@ -23,7 +23,7 @@
             <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo:</label>
+                    <label class="col-sm-2 control-label">código:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.codigobeneficio}">Usuario Id</p></div>
                 </div>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">descripcion:</label>
+                    <label class="col-sm-2 control-label">Descripción:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.descripcionbeneficio}">descripcion</p>
                     </div>
