--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -24,7 +24,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
                     <h3 align="center">Listado de Comites</h3>
-                    <table class="table table-striped">
+                    <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+             <thead> 
                         <tr>
                              <th>Código</th>
                             <th>Nombre</th>
@@ -38,6 +39,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <th>Acciones</th>
 
                         </tr>
+             </thead>
                         <tr th:each="comite : ${comites}">
                             <td th:text="${comite.codigocomite}">Código</td>
                             <td th:text="${comite.nombrecomite}">Nombre</td>
@@ -63,9 +65,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <!--<a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>-->
                         </tr>
                     </table>
-                  
+                     <!--<th:block th:include="../templates/paginator-nav"></th:block>-->
+                
                 </div>
-                 <!--<nav th:replace="paginator-nav :: paginator"></nav>-->
+                <!--<th:block th:include="../templates/paginator-nav"></th:block>-->
             </div>    
              <div class="col-md-12">
                     <th:block th:include="../templates/footer"></th:block>
@@ -73,6 +76,35 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
     
 <!--</div>-->
+
+<script th:inline="javascript">
+    $(document).ready(function () {
+            $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
+
  <script th:inline="javascript">
         $(document).ready(function () {
     if([[${msg}]]===3){
