--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head lang="en">
-
-        <title>Crear Comision</title>
+<head lang="en">
+    <title>Crear Comision</title>
     <th:block th:include="../templates/header"></th:block>
-    
 </head>
 <body>
-      <div class="contenedorizq"><label  >pnt_gecoms</label> 
+        <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+        <div class="col-md-9">
+<div class="contenedorizq"> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
-    
 <div class="row">
-            <div class="col-md-3">
-                        <th:block th:include="../templates/menu"></th:block>
-                    </div>
+          
     <div class="col-md-9">
     <div class="row text-center">
         <br><br>
@@ -27,15 +26,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <h3 align="center">Crear Comision</h3>
         <div>
             <form class="form-horizontal" th:object="${comision}" th:action="@{../comision}" method="post" enctype="multipart/form-data">
-<!--                <input type="hidden" th:field="*{codigocomision}"/>
-                <input type="hidden" th:field="*{nombrecomision}"/>-->
-<!--                            <div class="form-group">
-                                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" th:field="*{codigocomision}"/>
-                                </div>
-                            </div>-->
-
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nombre Comision:</label>
                     <div class="col-sm-10">
@@ -48,22 +38,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                     <input type="text" class="form-control" th:field="*{numeroacuerdocomision}"/>
                                 </div>
                             </div>
-                <div class="form-group">
-<!--                <label class="col-sm-2 control-label">Fecha Desde:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" required="true" th:field="*{fechadesdecomision}"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Hasta:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" required="true" th:field="*{fechahastacomision}"/>
-                    </div>
-                </div>-->
                <div class="form-group">
                     <label class="col-sm-2 control-label">acuerdo:</label>
                     <div class="col-sm-10">
-                        <input type="file" name="file" class="" required="true" th:field="*{docaprovacion}"/>
+                        <input type="file" name="file" />
+                               <!--class="" required="true" th:field="*{docaprovacion}"-->
+                               
                     </div>
                 </div>
 
