--- a/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
@@ -26,7 +26,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-8">
             <h3 align="center">Registro de Incapacidades</h3>
             <div>
-                <form class="form-horizontal" th:object="${incapacidad}" th:action="@{../incapacidad}" method="post">
+                <form class="form-horizontal" th:object="${incapacidad}" th:action="@{../incapacidad}"  method="post" enctype="multipart/form-data">
                      <div class="col-md-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">Empleado:</label>
@@ -117,12 +117,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                              <!--<small class="form-text text-danger" th:if="${#fields.hasErrors('duicapacitador')}" th:errors="*{duicapacitador}"></small>-->
                         </div>
                     </div>
-                                         <div class="form-group">
-                        <label class="col-sm-4 control-label">Subir Fromulario:</label>
-                        <div class="col-sm-6">
-                            <input type="file" name="Subir Formulario" value="documento1" />
-                        </div>
+                     <div class="form-group">
+                    <label class="col-sm-2 control-label">acuerdo:</label>
+                    <div class="col-sm-10">
+                        <input type="file" name="file" />
+                               <!--class="" required="true" th:field="*{docaprovacion}"-->
+                               
                     </div>
+                </div>
                          
                                             <div class="form-group">
                         <label class="col-sm-4 control-label">Subir Documento 2:</label>
@@ -140,7 +142,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
                     <div class="col-md-12">
                         <div class="row" align="center">
-                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/capacitadores/}">Regresar</a></button>
+                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/incapacidadaes/}">Regresar</a></button>
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
                         </div>
@@ -189,7 +191,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             dateFormat: 'yy-mm-dd'
         });
     });
-    
+    function descargapdf(idpdf){
+             location.href = './descarga/' + idpdf;
+        }
 </script>
 
 <script type="text/javascript" th:src="@{/js/sweetalert.js}"></script>
