incapacidad y inasistencia funcionando al 100 con carga y descarga de pdf

--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -118,9 +118,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Código de Capacitador:</label>
+                            <label class="col-sm-5 control-label">Nombre Capacitador:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.codigocapacitador.codigoempleado.nombreempleado}">Nombre de Capacitador</p>
+                                <p class="form-control-static" th:text="${capacitacion.codigocapacitador.nombrecapacitador}">Nombre de Capacitador</p>
                             </div>
                         </div>
                  
