--- a/src/main/resources/templates/fragments/inasistencia/inasistencias.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistencias.html
@@ -35,6 +35,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Justificación</th>
                 <th>Fecha Desde</th>
                 <th>Fecha Hasta</th>
+                 <th>Descargar Acuerdo</th>
+               
                
                <th>Acciones</th>
                 
@@ -49,6 +51,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${#calendars.format(inasistencia.fechadesdeinasistencia, 'dd/MM/yyyy')}">Fecha Desde</td>
                   <td th:text="${#calendars.format(inasistencia.fechahastainasistencia, 'dd/MM/yyyy')}">Fecha Desde</td>
                 <!--<td th:text="${inasistencia.fechahastainasistencia}"> Hasta</td>-->
+                 <td><a  class="btn btn-danger" th:onclick="'descargapdf(\'' + ${inasistencia.codigoinasistencia} + '\');'" >Descargar Acuerdo</a></td>
               
                 
                 <td>
@@ -95,6 +98,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
        });
     }
     });
+      function descargapdf(idpdf){
+             location.href = './descarga/' + idpdf;
+        }
 </script> 
      <script th:inline="javascript">
         $(document).ready(function () {
