--- a/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
@@ -22,7 +22,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-8">
         <h2 align="center">Crear Inasistencia</h2>
         <div>
-            <form class="form-horizontal" th:object="${inasistencia}" th:action="@{../inasistencia}" method="post">
+            <form class="form-horizontal" th:object="${inasistencia}" th:action="@{../inasistencia}"  method="post" enctype="multipart/form-data">
 <!--                <input type="hidden" th:field="*{codigocomision}"/>
                 <input type="hidden" th:field="*{nombrecomision}"/>-->
                              <div class="form-group">
@@ -61,6 +61,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
   <div class="col-md-12">
+      
+         <div class="form-group">
+                    <label class="col-sm-2 control-label">acuerdo:</label>
+                    <div class="col-sm-10">
+                        <input type="file" name="file" />
+                               <!--class="" required="true" th:field="*{docaprovacion}"-->
+                               
+                    </div>
+                </div>
                         <div class="row" align="center">
                             <button type="button" class="btn btn-info"><a href="#" th:href="@{/inasistencias/}">Regresar</a></button>
                             <button type="submit" class="btn btn-primary">Guardar</button>
@@ -113,5 +122,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
        });
     }
     });
+      function descargapdf(idpdf){
+             location.href = './descarga/' + idpdf;
+        }
 </script> 
 </html>
